--- a/index.hbs
+++ b/index.hbs
@@ -10,11 +10,11 @@
 		{{#if @site.cover_image}}
 		<div class="blog-cover cover">
 			<img
-			srcset="{{img_url @site.cover_image size="s"}} 320w,
-              {{img_url @site.cover_image size="m"}} 640w,
-              {{img_url @site.cover_image size="l"}} 960w,
-              {{img_url @site.cover_image size="xl"}} 1920w"
-      src="{{img_url @site.cover_image size="xl"}}"
+			srcset="https://api.hyh.ink/fy4a/320w_FY4A_DISK.JPG 320w,
+              https://api.hyh.ink/fy4a/640w_FY4A_DISK.JPG 640w,
+              https://api.hyh.ink/fy4a/960w_FY4A_DISK.JPG 960w,
+              https://api.hyh.ink/fy4a/1920w_FY4A_DISK.JPG 1920w"
+      src="https://api.hyh.ink/fy4a/FY4A_DISK.JPG"
 			alt="{{@site.title}}" />
 		</div>
 		{{/if}}
